--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,15 @@
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>4.1.2</version>
+	</dependency>	
+	
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20210307</version>
 	</dependency>
-		
+			
 	
   </dependencies>
 </project>
