--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,22 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
+  
+  <!-- Run the following command on command line to execute testng.xml: mvn clean test -DsuiteXmlFile=testng.xml  -->
+  <build>
+	  <plugins>
+	  	<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <version>2.22.2</version>
+		    <configuration>
+		        <suiteXmlFiles>
+		            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+		        </suiteXmlFiles>
+		    </configuration>
+	  	</plugin>
+	  </plugins>
+  </build>
 
   <dependencies>
     <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
@@ -54,6 +70,57 @@
 	    <version>20210307</version>
 	</dependency>
 			
+	
+	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>3.11.2</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>7.4.0</version>
+	    <scope>test</scope>
+	</dependency>
+	<!-- Cucumber Versions above 6.8 do not work well with RestAssured 4, hence not using the latest cucumber-->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-core</artifactId>
+	    <version>6.8.0</version>
+	</dependency>
+	<!-- Cucumber Versions above 6.8 do not work well with RestAssured 4, hence not using the latest cucumber-->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-testng</artifactId>
+	    <version>6.8.0</version>
+	    <scope>test</scope>
+	</dependency>
+	<!-- Cucumber Versions above 6.8 do not work well with RestAssured 4, hence not using the latest cucumber-->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-java8</artifactId>
+	    <version>6.8.0</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports--> 
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.0.8</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports-->
+	
+	<dependency>
+	    <groupId>com.relevantcodes</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>2.41.2</version>
+	</dependency>
 	
   </dependencies>
 </project>
